fix img's height, z-index

--- a/VMS/Pages/Organization/Profile/Act.razor.scss
+++ b/VMS/Pages/Organization/Profile/Act.razor.scss
@@ -187,6 +187,7 @@
     .act-img {
         width: 100%;
         max-height: 269px;
+        min-height: 269px;
         object-fit: cover;
         object-position: center;
         border-radius: 10px 10px 0 0;
