--- a/VMS/Pages/Organization/Profile/EditConfirm.razor.css
+++ b/VMS/Pages/Organization/Profile/EditConfirm.razor.css
@@ -11,7 +11,7 @@
   bottom: 0;
   left: 0;
   background-color: rgba(196, 196, 196, 0.38);
-  z-index: 3; }
+  z-index: 120; }
   .pop-up .border-10 {
     border-radius: 10px; }
   .pop-up .border-5 {
