--- a/VMS/Pages/Organization/Profile/Notification.razor.scss
+++ b/VMS/Pages/Organization/Profile/Notification.razor.scss
@@ -7,7 +7,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(196, 196, 196, 0.38);
-    z-index: 3;
+    z-index: 120;
 
     .notification__content {
         position: absolute;
